$Id$

NEWS for SoftHSM -- History of user visible changes

SoftHSM trunk

* Added mechanism CKM_RSA_X_509


SoftHSM 1.1.4 - 2010-04-06

* Respect --disable-64bit
* Respect $DESTDIR for config files
* The binaries can now show the version number
* softhsm-keyconv could not handle --ttl properly
* Link softhsm static with libsofthsm
* Build libsofthsm.so without version number
* libsofthsm.so is now a loadable module


SoftHSM 1.1.3 - 2010-01-25

* Only check for the SQLite3 library. The binary is not needed.
* Switch to PKCS#11 header file from the Scute project.
* KNOWN BUG: A bug in Botan made some of the checks to fail on Debian
  unstable. The bug may appear on other platforms.
  Please upgrade to Botan 1.8.9 when it is available.


SoftHSM 1.1.2 - 2009-12-21

* Documentation on how to do backup.
* Limiting the number of concurrent sessions to 256, because SQLite has a
  limit on the number of database connections.
* Install a sample of the configuration file.
* Manual pages are now available for softhsm, softhsm-keyconv, and
  softhsm.conf
* Bugfix: --enable-64bit configure option did not work correctly.
* KNOWN BUG: A version of Botan available in some OS has a problem with
             the entropy. This causes SoftHSM to freeze in some operations.
             Please upgrade to the Botan 1.8.5 or greater.


SoftHSM 1.1.1 - 2009-12-04

* Bugfix: Signing could not be done when another application had a lock
  on the database.
* Bugfix: Check if a session were able to create a connection to the database.
* KNOWN BUG: A version of Botan available in some OS has a problem with 
             the entropy. This causes SoftHSM to freeze in some operations.
             Please upgrade to the Botan 1.8.5 or greater.


SoftHSM 1.1.0 - 2009-11-02

* The tool softhsm-keyconv can convert keys between BIND key file format
  and PKCS#8 file format. So it can be imported to SoftHSM.
  It can also convert back to BIND format.
* C_FindObjectsInit is now up to 80 % faster.