@@ -174,6 +174,9 @@ Defines the
 .I label
 of the object or the token.
 .TP
+.B \-\-module \fIpath\fR
+Use another PKCS#11 library than SoftHSM.
+.TP
 .B \-\-pin \fIPIN\fR
 The
 .I PIN
